--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
         <div class="burger-links">
             <a href="career.html">Career</a>
-            <a href="resumee.html">Resumee</a>
-            <a href="books.html">Books</a>
+            <a href="showroom.html">Resumee</a>
+            <a href="booknotes.html">Books</a>
             <button onclick="toggleMenu()">Close Menu</button>
         </div>
 
