Update and rename playground.html to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
         <div class="navigation" aria-label="Main Navigation">
 
             <div>
-                <a class="menu-link" href="career.html">Career</a>
-                <a class="menu-link" href="showroom.html">My Projects</a>
-                <a class="menu-link" href="booknotes.html">Book Notes</a>
+                <a class="menu-link" href="resume.html">Resume</a>
+                <a class="menu-link" href="portfolio.html">Portfolio</a>
+                <a class="menu-link" href="mydevlab.html">MyDevLab</a>
             </div>
         </div>
 
@@ -28,9 +28,9 @@
         </div>
 
         <div class="burger-links">
-            <a href="career.html">Career</a>
-            <a href="showroom.html">My Projects</a>
-            <a href="booknotes.html">Book Notes</a>
+            <a href="resume.html">Resume</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="mydevlab.html">MyDevLab</a>
             <button onclick="toggleMenu()">Close Menu</button>
         </div>
 
