--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
     </head>
 
     <body>
-        <img class="header-image" src="./Ressources/clouds.jpg" alt="A selfi of Raik on top of a mountain">
+        <img class="header-image" src="./Ressources/clouds.jpg" alt="Image showing blue sky and clouds">
    
         <a href="index.html"><img class="logo" src="./Ressources/Logo3.png" alt="Logo showing the name Raik Lasner and html tags"></a>
 
