--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Raik's Place'</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style-hompage.css">
 
         <script>
             function toggleMenu() {
@@ -28,7 +28,6 @@
 
     <body>
 
-        <img class="header-image" src="./Ressources/Meontop.jpeg" alt="A selfi of Raik on top of a mountain">
    
         <a href="index.html"><img class="logo" src="./Ressources/Logo3.png" alt="Logo showing the name Raik Lasner and html tags"></a>
 
