--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Raik's Resumee</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style-resume.css">
 
         <script>
             function toggleMenu() {
