--- a/portfolio.html
+++ b/portfolio.html
@@ -53,21 +53,17 @@
         <div class="underconstruction"><img class="construction-image" src="./Ressources/underconstruction.png" alt="a sign saying the page is under construction"></div>
         
         <div class="page-bottom">
-            <div class="page-bottom-text">
-                <p>&copy; 2025 Raik Lasner | All Rights Reserved</p>
-            </div>
-            <div class="page-bottom-links">              
-                <a class="social-links" href="https://www.linkedin.com/in/raik-lasner-productmanager/">
-                    <img src="./Ressources/linkedinlogo.png" alt="Linkedin logo">
-                </a>
-                <a class="social-links" href="https://www.xing.com/profile/Raik_Lasner">
-                    <img src="./Ressources/xinglogo.png" alt="logo xing">
-                </a>
-                <a class="social-links" href="mailto:raik.lasner@googlemail.com">
-                    <img src="./Ressources/gmail.png" alt="Gmail logo">
-                </a>
+            <div class="page-bottom-links"> 
+                <div class="social-links"><p>&copy; 2025 Raik Lasner</p></div>             
+                <div class="social-links"><a href="https://www.linkedin.com/in/raik-lasner-productmanager/"><img src="./Ressources/linkedinlogo.png" alt="Linkedin logo"></a></div>
+                <div class="social-links"><a href="https://www.xing.com/profile/Raik_Lasner"><img src="./Ressources/xinglogo.png" alt="logo xing"></a></div>
+                <div class="social-links"><a href="mailto:raik.lasner@googlemail.com"><img src="./Ressources/gmail.png" alt="Gmail logo"></a></div>
             </div>
         </div>
+        
+    </body>
+
+</html>
 
     </body>
 
