--- a/mydevlab.html
+++ b/mydevlab.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Raik's Resumee</title>
         <link rel="stylesheet" type="text/css" href="style-resume.css">
 
