--- a/resume.html
+++ b/resume.html
@@ -95,8 +95,8 @@
                     <h2>reBuy</h2>
                     <h3>Product Manager Returns and Customer Care</h3>
                     <small>2018 - 2017</small>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. 
-                        Praesent libero. Sed cursus ante dapibus diam.
+                    <p>Leading projects to reduce customer contact rates in customer care, implementing self-service tools on reBuy domains, and developing a dedicated return portal. 
+                        Additionally, I optimized logistics processes by introducing software-supported solutions for returns management, ensuring efficiency and enhanced user satisfaction.
                     </p>
                     <span class="left-container-arrow"></span>
                 </div>
@@ -108,8 +108,9 @@
                     <h2>reBuy</h2>
                     <h3>Product Manager Logistic </h3>
                     <small>2016 - 2014</small>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. 
-                        Praesent libero. Sed cursus ante dapibus diam.
+                    <p>Driving international integration and automation of marketplaces like Amazon, eBay, and Groupon. 
+                        Key achievements include a joint venture with Infoscore GmbH for debt reduction, implementing Arvato SCM & Logistics fulfillment solutions, and developing innovative tools such as a customized keyboard device for goods receiving departments. 
+                        Additionally, I automated the product photography process, developed software for order assembly and grading, and created a tailored Content Management System for managing and pricing product grading.
                     </p>
                     <span class="right-container-arrow"></span>
                 </div>
@@ -121,8 +122,8 @@
                     <h2>reBuy</h2>
                     <h3>Senior Category Manager</h3>
                     <small>2013 - 2012</small>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. 
-                        Praesent libero. Sed cursus ante dapibus diam.
+                    <p>Key User in eSales and Category Management, responsible for expanding reBuy's Trade-In portfolio by introducing new categories like tablets and cameras. 
+                        Achievements include optimizing grading and pricing strategies and mentoring Junior Category Managers to ensure team growth and expertise.
                     </p>
                     <span class="left-container-arrow"></span>
                 </div>
@@ -134,8 +135,7 @@
                     <h2>reBuy</h2>
                     <h3>Category Manager</h3>
                     <small>2010 - 2012</small>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. 
-                        Praesent libero. Sed cursus ante dapibus diam.
+                    <p>Managing pricing strategies for gaming categories, ensuring optimal inventory control, and closely monitoring competitors to maintain a competitive edge in the market.
                     </p>
                     <span class="right-container-arrow"></span>
                 </div>
